--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,9 @@ table {
 
 * {
     box-sizing: border-box;
+    color:rgb(225, 239, 230);
+    background-color: rgb(0, 4, 17, .8);
+   
 }
 
 html {
@@ -93,6 +96,15 @@ header {
     background-repeat: no-repeat;
 }
 
+header div h1{
+    text-align: center;
+}
+
+header nav div{
+    display:flex;
+    justify-content: space-evenly;
+}
+
 /* spacers */
 .spacer {
     width: 100%;
@@ -108,20 +120,38 @@ header {
 /* gallery section */
 .gallery {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     text-align: center;
     background-color: rgb(0, 4, 17);
+}
+
+.gallery div{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    height: 100%;
+    width: 100%;
+}
+
+.gallery h2{
+    width:100%;
+}
+
+.gallery img{
+    margin: 10px;
 }
 
 /* about us section */
 .about {
     width: 100%;
-    height: 75vh;
+    height: 50%;
     text-align: center;
     background-image: url("../img/staff-cooks.jpg");
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
+    display: flex;
+    
 }
 
 .about-container {
@@ -135,11 +165,13 @@ header {
 
 .about h2 {
     width: 100%;
+    background-color: rgb(0, 4, 17, .8)
 }
 
 .about-container .text {
     width: 50%;
 }
+
 
 /* contact us section */
 .contact {
@@ -155,10 +187,17 @@ header {
     width: 100%;
     height: 100%;
     background-color: rgb(0, 4, 17, .8);
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .contact h2 {
     padding-top: 5vh;
+    width:100%;
+
+    
+    
 }
 
 .contact h3 {
@@ -191,35 +230,90 @@ header {
 /* footer section */
 footer {
     width: 100%;
-    height: 15vh;
+    height: 100%;
     padding-top: 2.5vh;
     font-size: 3rem;
+}
+
+footer div nav{
+    display:flex;
+    justify-content: space-evenly;
 }
 
 /* mobile media query */
 @media (max-width: 428px) {
     /* header section */
+
+    header {
+        width: 100%;
+        height: 100%;
+        background-image: none;
+        display:flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    
+    header div h1{
+        width: 100%;
+        height: 100%;
+        text-align: center;
+    }
+    
+    header nav div{
+        display:flex;
+        flex-direction: column;
+        margin: 5px 0;
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
+    }
     
 
     /* gallery section */
+
     .gallery {
-        height: auto;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        background-color: rgb(0, 4, 17);
     }
+    
+    .gallery div{
+        flex-direction: column;
+    }
+    
+    .gallery h2{
+        width:100%;
+        border-bottom: 1px solid white;
+    }
+
     
     /* about us section */
 
     .about {
-        height: 200vh;
+        width: 100%;
+        height: 50%;
+        text-align: center;
+        background-image: none;    
+    }
+    
+    .about-container {
+         flex-direction: column;
+         align-items: center;
     }
     
     .about h2 {
-        width: 100%;
-        padding-top: 5vh;
+        border-bottom: 1px solid white;
+    }
+    
+    .about h3{
+        width:100%;
+        border-bottom: 1px solid white;
     }
     
     .about-container .text {
-        width: 85%;
+        width: 100%;
     }
+    
     
     /* contact us section */
     .contact h3 {
@@ -249,5 +343,11 @@ footer {
         height: auto;
         padding-top: 2.5vh;
         font-size: 2rem;
+        display:flex;
+        flex-direction: column;
+    }
+
+    footer div nav{
+        flex-direction: column;
     }
 }
